# femview

./: LICENSE.md  README.md  femview.f04  femview.f06  femview.js  index.html  make_html.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: static.yml
femview/: femview.py  get_model_data.py
femview/js/: femview.mjs
utils/: ViewHelper.js  faces.txt  femview.mjs  get_model_data.py  lines.txt  nodes.txt  template.html  wires.txt
