[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "femview"
version = "0.1.0"
requires-python = ">=3.0"
authors = [
  {name = "Marcus Bakke", email = "marcusabakke@gmail.com"},
]
maintainers = [
  {name = "Marcus Bakke", email = "marcusabakke@gmail.com"}
]
description = "Nastran FEM micro-visualizer"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Nastran", "THREE", "html"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "click",
  "jsmin",
  "pyNastran",
]

[project.urls]
Repository = "https://github.com/dmarc3/femview"

[project.scripts]
femview = "femview.femview:main_cli"
